# serverless-datalake-demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT-SUMMARY.md  QUICKSTART.md  README.md  START-HERE.md
data-generator/: README.md  generate_ecommerce_data.py  pyproject.toml  requirements.txt
docs/: architecture.md  cost-analysis.md  data-quality.md  demo-script.md  deployment-guide.md  gitflow-strategy.md  quicksight-integration.md
glue-jobs/: sqs_glue_trigger.py  transform_raw_to_curated.py
queries/: sample_queries.sql
scripts/: cleanup.sh  create-github-repo.sh  demo-helper.sh  setup.sh
terraform/: locals.tf  outputs.tf  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example
terraform/environments/prod/: locals.tf  main.tf  terraform.tfvars.example
terraform/modules/athena/: main.tf  outputs.tf  variables.tf
terraform/modules/glue/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/observability/: main.tf  outputs.tf  variables.tf
terraform/modules/quicksight/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf
terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
